--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pdm_ejercicios_parcial2"
-        tools:targetApi="31" />
+        tools:targetApi="31">
+
+        <activity
+            android:name=".WidgetsActvity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value=""/>
+
+        </activity>
+
+
+    </application>
 
 </manifest>
