--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,27 +13,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pdm_ejercicios_parcial2"
         tools:targetApi="31">
-
+        <activity
+            android:name=".AdvancedWidgetsActivity"
+            android:exported="false" />
         <activity
             android:name=".WidgetsActvity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
             <meta-data
                 android:name="android.app.lib_name"
-                android:value=""/>
-
+                android:value="" />
         </activity>
-
-
     </application>
 
 </manifest>
