--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Pdm_ejercicios_parcial2"
         tools:targetApi="31">
         <activity
+            android:name=".DrawerActivity"
+            android:exported="false" />
+        <activity
             android:name=".AdvancedWidgetsActivity"
             android:exported="false" />
         <activity
